use margin instead of padding for pagewrap to ensure shaddow doesn't overlap in UI tests

--- a/plugins/CoreHome/stylesheets/layout.less
+++ b/plugins/CoreHome/stylesheets/layout.less
@@ -121,12 +121,12 @@ nav {
 #root {
 
   .pageWrap {
-    padding-left: 18px;
-    padding-right: 18px;
+    margin-left: 18px;
+    margin-right: 18px;
   }
 
   #secondNavBar + .pageWrap {
-    margin-left: 224px;
+    margin-left: 242px;
   }
 
   &>.top_controls {
@@ -149,7 +149,7 @@ nav {
 
   @media all and (max-width: 992px) {
     .pageWrap {
-      margin-left: 0 !important;
+      margin-left: 18px !important;
     }
   }
 
@@ -552,7 +552,7 @@ nav {
 
   #root{
     #secondNavBar + .pageWrap {
-      margin-left: 0;
+      margin-left: 18px;
     }
 
     .top_controls{
