--- a/plugins/CoreHome/stylesheets/zen-mode.less
+++ b/plugins/CoreHome/stylesheets/zen-mode.less
@@ -8,7 +8,7 @@
   }
 
   #root #secondNavBar + .pageWrap {
-    margin-left: 0;
+    margin-left: 18px;
   }
   
   .bannerHeader {
